<resources>
    <string name="app_name">Incredible App</string>
    <string name="back">Back</string>
    <string name="storyline">Storyline</string>
    <string name="cast">Cast</string>
    <string name="desc_avengersEG">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos actions and restore balance to the universe.</string>
    <string name="name_avg">Avengers:\nEnd Game</string>
    <string name="o_y_13">13+</string>
    <string name="type_avg">Action, Adventure, Fantasy</string>
    <string name="rev">125 REVIEWS</string>
    <string name="q_rev">125</string>
    <string name="alone_rev">REVIEWS</string>
    <string name="actor_1">Robert\nDowney Jr.</string>
    <string name="actor_2">Chris\nEvans</string>
    <string name="actor_3">Mark\nRuffalo</string>
    <string name="actor_4">Chris\nHemsworth</string>
    <string name="movies_list">Movies List</string>
    <string name="name_avg_eg_without_enter">Avengers: End Game</string>
    <string name ="time_of_avg_eg">137 MIN</string>
</resources>