<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="ru.studentaa.denisstupnikov.incredibleapp.FragmentMoviesList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline0_05Top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline0_5Half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16dpEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16dpStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <ImageView
            android:id="@+id/view_image_shape"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/view_movies_list"
            app:layout_constraintStart_toStartOf="@id/guideline16dpStart"
            app:layout_constraintTop_toTopOf="@id/guideline0_05Top"
            app:srcCompat="@drawable/ic_combined_shape" />

        <TextView
            android:id="@+id/view_movies_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start|top"
            android:paddingStart="@dimen/space_2x"
            android:text="@string/movies_list"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/guideline16dpEnd"
            app:layout_constraintStart_toEndOf="@id/view_image_shape"
            app:layout_constraintTop_toTopOf="@id/guideline0_05Top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16dpBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="16dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cw_avg_eg"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:layout_marginTop="@dimen/space_4x"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="@dimen/space_2x"
            app:layout_constraintStart_toStartOf="@id/guideline16dpStart"
            app:layout_constraintTop_toBottomOf="@id/view_movies_list"
            app:layout_constraintBottom_toBottomOf="@id/guideline16dpBottom">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_bg">

                <ImageView
                    android:id="@+id/image_film"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@id/name_film"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/bg_card_view" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toTopOf="@id/name_film"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/ic_mask" />

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_2x"
                    android:background="@drawable/ic_rectangle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/o_y_13"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_3x"
                    android:layout_marginEnd="@dimen/space_1_5x"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_like" />

                <TextView
                    android:id="@+id/tagline_avg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_1_5x"
                    android:text="@string/type_avg"
                    android:textColor="@color/taglinecolor"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toTopOf="@id/rating_bar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/MovieRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/space_1_5x"
                    android:fontFamily="sans-serif-black"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:rating="4"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:transformPivotX="0dp"
                    android:transformPivotY="0dp"
                    app:layout_constraintBottom_toTopOf="@id/name_film"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/quan_reviews"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_0_5x"
                    android:layout_marginEnd="@dimen/space_1_5x"
                    android:layout_marginBottom="@dimen/space_1_5x"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/q_rev"
                    android:textColor="@color/reviews"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toTopOf="@id/name_film"
                    app:layout_constraintEnd_toEndOf="@id/rating_bar"
                    app:layout_constraintTop_toBottomOf="@id/tagline_avg" />

                <TextView
                    android:id="@+id/reviews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_0_5x"
                    android:layout_marginBottom="@dimen/space_1_5x"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/alone_rev"
                    android:textColor="@color/reviews"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toTopOf="@id/name_film"
                    app:layout_constraintStart_toEndOf="@id/quan_reviews"
                    app:layout_constraintTop_toBottomOf="@id/tagline_avg" />

                <TextView
                    android:id="@+id/name_film"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingStart="@dimen/space_2x"
                    android:paddingTop="@dimen/space_2x"
                    android:text="@string/name_avg_eg_without_enter"
                    android:textColor="@color/white_ececec"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toTopOf="@id/view_time"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/view_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:paddingStart="@dimen/space_2x"
                    android:paddingTop="@dimen/space_1x"
                    android:paddingBottom="@dimen/space_2x"
                    android:text="@string/time_of_avg_eg"
                    android:textColor="@color/time_color"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>